--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <div class="button">
     <div class="modal-window">
         <pre>
-You will be given 10 chances to winn the game.
+You will be given 10 chances to win the game.
 Try to guess numbers between 1-20 and earn coins:)
 Note: If you are out of luck you lose coins:(
 
